manifests/grafana-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
  - name: gateway
    namespace: istio-ingress
    sectionName: http
  - name: gateway
    namespace: istio-ingress
    sectionName: https
  hostnames:
  - "grafana.int.kube"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: grafana
      port: 3000
