manifests/httpbin-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
spec:
  parentRefs:
  - name: gateway
    namespace: istio-ingress
    sectionName: http
  - name: gateway
    namespace: istio-ingress
    sectionName: https
  hostnames:
  - "httpbin.int.kube"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: my-added-header
          value: added-value
    backendRefs:
    - name: httpbin
      port: 8000
