manifests/jaeger-route-gke.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger
spec:
  parentRefs:
    - name: gateway
      namespace: gke-gateway
      sectionName: https
  hostnames:
    - "jaeger.gcp.kube"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jaeger
          port: 16686
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-http-redirect
spec:
  parentRefs:
    - name: gateway
      namespace: gke-gateway
      sectionName: http
  hostnames:
    - "jaeger.gcp.kube"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
