manifests/jaeger-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger
spec:
  parentRefs:
  - name: gateway
    namespace: istio-ingress
    sectionName: http
  - name: gateway
    namespace: istio-ingress
    sectionName: https
  hostnames:
  - "jaeger.int.kube"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jaeger
      port: 16686
